--- a/projects.json
+++ b/projects.json
@@ -3,12 +3,12 @@
       "name": "World Alarm Clock",
       "live": "https://v2-world-alarm-clock.vercel.app/",
       "git": "https://github.com/rocknrome/v2-World-Alarm-Clock",
-      "image": "https://imgur.com/2Aiq3GV"
+      "image": "https://i.imgur.com/2Aiq3GV.png"
     },
     {
       "name": "Properties Development",
       "live": "https://properties-full-crud-v2.onrender.com/properties",
       "git": "https://github.com/rocknrome/Project-2-RE-Properties/tree/master",
-      "image": "https://imgur.com/7xOfCnt"
+      "image": "https://i.imgur.com/7xOfCnt.png"
     }
   ]
